# snaildb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml  release.yml
snaildb/: Cargo.toml
snaildb/examples/: README.md  basic_operations.rs  batch_operations.rs  custom_flush_threshold.rs  string_operations.rs
snaildb/src/: db.rs  lib.rs  main.rs
snaildb/src/engine/: lsm.rs  memtable.rs  mod.rs  sstable.rs  wal.rs
snaildb/src/storage/: bloom_filter.rs  mod.rs  sstable.rs
snaildb/src/utils/: mod.rs
snaildb/src/wal/: db_sync.rs  enums.rs  mod.rs  wal.rs
snaildb/src/worker/: handler.rs
snaildb/tests/: usage.rs  wal.rs
src/: lib.rs  lsm.rs  main.rs  memtable.rs  sstable.rs  utils.rs  value.rs  wal.rs
src/app/: server.rs  types.rs
src/engine/: lsm.rs  memtable.rs  mod.rs  wal.rs
src/utils/: mod.rs  record.rs
