[workspace]
members = [
    "snaildb",
    "snailctl"
]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2021"
authors = ["Hk669"]
license = "Apache-2.0"
repository = "https://github.com/Hk669/snaildb"
homepage = "https://github.com/Hk669/snaildb"
documentation = "https://docs.rs/snaildb"
keywords = ["database", "key-value", "embedded", "storage"]
categories = ["database"]
